--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node-dev ./app.js",
-    "release": "pm2 start ./app.js"
+    "dev": "export NODE_ENV='development' && sudo node-dev ./app.js",
+    "release": "export NODE_ENV='production' && sudo pm2 start ./app.js ",
+    "stop": "sudo pm2 stop all"
   },
   "repository": {
     "type": "git",
